Сделал Desctop главной страницы

--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -9,23 +9,23 @@
           </div>
         </div>
       </div>
-      <div class="swiper-slide hero__slide hero__slide--img2"">
+      <div class="swiper-slide hero__slide hero__slide--img2">
         <div class=" hero__container">
-        <div class="hero__content">
-          <h2 class="hero__title">1000+ аксессуаров для дома</h2>
-          <a href="#" class="btn-primary">Подробнее</a>
+          <div class="hero__content">
+            <h2 class="hero__title">1000+ аксессуаров для дома</h2>
+            <a href="#" class="btn-primary">Подробнее</a>
+          </div>
+        </div>
+      </div>
+      <div class=" swiper-slide hero__slide hero__slide--img3">
+        <div class=" hero__container">
+          <div class="hero__content">
+            <h2 class="hero__title hero__title--white ">Коллекция стильного и яркого текстиля</h2>
+            <a href="#" class="btn-primary">Подробнее</a>
+          </div>
         </div>
       </div>
     </div>
-    <div class=" swiper-slide hero__slide hero__slide--img3"">
-        <div class=" hero__container">
-      <div class="hero__content">
-        <h2 class="hero__title hero__title--white ">Коллекция стильного и яркого текстиля</h2>
-        <a href="#" class="btn-primary">Подробнее</a>
-      </div>
-    </div>
-  </div>
-  </div>
-  <div class="swiper-pagination"></div>
+    <div class="swiper-pagination"></div>
   </div>
 </section>
