--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -8,3 +8,10 @@
 @import "./components/nav";
 @import "./components/header";
 @import "./components/hero";
+@import "./components/offers";
+@import "./components/rating";
+@import "./components/collection";
+@import "./components/categories";
+@import "./components/useful";
+@import "./components/form";
+@import "./components/footer";
