--- a/src/partials/head.html
+++ b/src/partials/head.html
@@ -7,7 +7,9 @@
   <link rel="preload" href="fonts/OpenSansRegular.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/OpenSansSemiBold.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="preload" href="fonts/OpenSansBold.woff2" as="font" type="font/woff2" crossorigin>
+  <link rel="preload" href="fonts/PlayfairDisplay-Black.woff2" as="font" type="font/woff2" crossorigin>
   <link rel="stylesheet" href="css/vendor.min.css">
   <link rel="stylesheet" href="css/main.min.css">
   <script defer src="js/main.js"></script>
 </head>
+
