--- a/src/scss/_fonts.scss
+++ b/src/scss/_fonts.scss
@@ -1,3 +1,4 @@
 @include font-face("OpenSans", "../fonts/OpenSansRegular", 400, normal);
 @include font-face("OpenSans", "../fonts/OpenSansSemiBold", 600, normal);
 @include font-face("OpenSans", "../fonts/OpenSansBold", 700, normal);
+@include font-face("Playfair-Display", "../fonts/PlayfairDisplay-Black", 900, normal);
