--- a/src/scss/_settings.scss
+++ b/src/scss/_settings.scss
@@ -11,6 +11,7 @@ html {
 .page {
   height: 100%;
   font-family: var(--font-family);
+  font-weight: 400;
   -webkit-text-size-adjust: 100%;
 }
 
@@ -41,7 +42,20 @@ a {
   display: none !important; /* stylelint-disable-line declaration-no-important */
 }
 
+.btn {
+  border: 2px solid var(--primary-color);
+  border-radius: 10px;
+  padding: 19px 35px;
+  font-weight: 600;
+  font-size: 16px;
+  line-height: 100%;
+  text-align: center;
+  color: var(--primary-color);
+  cursor: pointer;
+}
+
 .btn-primary {
+  border: none;
   border-radius: 10px;
   padding: 19px 50px;
   font-weight: 700;
@@ -118,6 +132,14 @@ a {
 
 .page--ios .dis-scroll {
   position: relative;
+}
+
+.title-section {
+  margin: 0;
+  font-weight: 400;
+  font-size: 32px;
+  line-height: 100%;
+  color: var(--black-color);
 }
 
 .grid {
