--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,6 +1,6 @@
 <section class="footer">
   <div class="footer__wrapper">
-    <div class="container grid">
+    <div class="container footer__container">
       <div class="footer__left">
         <img class="footer__logo" src="img/footer-logo.svg" alt="">
         <ul class="list-reset footer__list-social">
@@ -23,7 +23,7 @@
       </div>
 
       <div class="footer__right">
-        <div class="footer__column">
+        <div class="footer__column footer__column1">
           <h2 class="footer__title">О нас</h2>
           <ul class="list-reset footer__list">
             <li class="footer__item"><a href="#" class="footer__link">О компании</a></li>
@@ -31,7 +31,7 @@
           </ul>
         </div>
 
-        <div class="footer__column">
+        <div class="footer__column footer__column2">
           <h2 class="footer__title">Услуги</h2>
           <ul class="list-reset footer__list">
             <li class="footer__item"><a href="#" class="footer__link">Доставка</a></li>
@@ -40,7 +40,7 @@
           </ul>
         </div>
 
-        <div class="footer__column">
+        <div class="footer__column footer__column3">
           <h2 class="footer__title">Связь с нами</h2>
           <ul class="list-reset footer__list">
             <li class="footer__item"><a href="#" class="footer__link">Обратная связь</a></li>
@@ -48,7 +48,7 @@
           </ul>
         </div>
 
-        <div class="footer__column">
+        <div class="footer__column footer__column4">
           <h2 class="footer__title">Сотрудничество</h2>
           <ul class="list-reset footer__list">
             <li class="footer__item"><a href="#" class="footer__link">Поставщикам</a></li>
