--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -33,11 +33,11 @@
   </div>
   <div class="header-row2">
     <div class="container header-row2__container">
-      <a href="#"><img src="img/logo.svg" alt="Логотип SitDownPls"></a>
+      <a href="index.html"><img src="img/logo.svg" alt="Логотип SitDownPls"></a>
       <nav class="nav">
         <ul class="list-reset nav__list">
           <li class="nav__item">
-            <a href="#" class="nav__link">Каталог</a>
+            <a href="catalog.html" class="nav__link">Каталог</a>
           </li>
           <li class="nav__item">
             <a href="#" class="nav__link">Магазины</a>
@@ -72,9 +72,14 @@
         <select class="header-row3__select" id="selectCategory">
           <option>Категория</option>
           <option>Диваны</option>
+          <option>Кресла</option>
           <option>Пуфы</option>
           <option>Кровати</option>
           <option>Тумбы</option>
+          <option>Комоды</option>
+          <option>Стулья</option>
+          <option>Столы</option>
+          <option>Аксессуары</option>
         </select>
       </div>
       <div class="header-row3__btns">
