--- a/src/scss/main.scss
+++ b/src/scss/main.scss
@@ -15,3 +15,7 @@
 @import "./components/useful";
 @import "./components/form";
 @import "./components/footer";
+
+// Страница Каталог
+@import "./components/breadcrumbs";
+@import "./components/catalog-section";
