--- a/src/scss/components/_form.scss
+++ b/src/scss/components/_form.scss
@@ -51,11 +51,8 @@
     @include flex-v-center;
   }
 
-  &__checkbox {
-    margin-right: 8px;
-  }
-
   &__accord {
+    display: inline-block;
     margin: 0;
     font-size: 14px;
     line-height: 19px;
@@ -65,4 +62,48 @@
       color: var(--primary-color);
     }
   }
+
+  &__checkbox-label {
+    cursor: pointer;
+  }
+}
+
+.form__checkbox {
+  position: absolute;
+  display: inline-block;
+  margin-right: 8px;
+  width: 0;
+  height: 0;
+  opacity: 0;
+}
+
+.form__custom-checkbox {
+  position: relative;
+  display: inline-block;
+  vertical-align: middle;
+  margin-right: 4px;
+  border: 1px solid #999;
+  border-radius: 2px;
+  width: 14px;
+  height: 14px;
+}
+
+.form__custom-checkbox::before {
+  content: "";
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  width: 100%;
+  height: 100%;
+  background-image: url("../img/check.svg");
+  background-position: center;
+  background-repeat: no-repeat;
+  background-color: transparent;
+  opacity: 0;
+  transform: translate(-50%, -50%);
+}
+
+.form__checkbox:checked + .form__custom-checkbox::before {
+  background-color: var(--primary-color);
+  opacity: 1;
 }
